@@ -1,4 +1,5 @@
 0.11
+ - Improve LICENSE AND COPYRIGHT section in doc.
 
 0.10 2025-01-22T09:08:53+01:00
  - Improve SYNOPSIS section in doc.
